--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,27 +4,43 @@ name: japanese
 services:
   db:
     image: postgres
-    #volumes:
-    #  - ./data/db:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+    healthcheck:
+      test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d japanese'"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   api:
     build:
       context: .
       dockerfile: ./docker/API/dev/Dockerfile
+    expose:
+      - 5000
     volumes:
       - ./API:/opt/API
-    ports:
-      - 5000:5000
     environment:
       - POSTGRES_HOST=japanese-db-1
       - POSTGRES_DB=japanese
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+
+  test:
+    build:
+      context: .
+      dockerfile: ./docker/test/dev/Dockerfile
+    environment:
+      - URL_HOST=http://127.0.0.1:8080
+    depends_on:
+      api:
+        condition: service_started
+
 
   nginx:
     build:
@@ -33,3 +49,6 @@ services:
     restart: unless-stopped
     ports:
       - 80:8080
+    depends_on:
+      api: 
+        condition: service_started
