--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,28 +3,40 @@ name: japanese
 
 services:
   db:
-    image: postgres
-    #volumes:
-    #  - ./data/db:/var/lib/postgresql/data
+    build:
+      context: .
+      dockerfile: ./docker/db/Dockerfile
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+    healthcheck:
+      test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres -d japanese'"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   api:
     build:
       context: .
       dockerfile: ./docker/API/dev/Dockerfile
     volumes:
       - ./API:/opt/API
-    ports:
-      - 5000:5000
     environment:
       - POSTGRES_HOST=japanese-db-1
       - POSTGRES_DB=japanese
+      - POSTGRES_DB_TEST=japanese_tests
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    healthcheck:
+      test: curl --fail http://api:5000/healthy || exit 1
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
 
   nginx:
     build:
@@ -33,3 +45,7 @@ services:
     restart: unless-stopped
     ports:
       - 80:8080
+    depends_on:
+      api: 
+        condition: service_healthy
+
